haskell-cabal-debian (4.19.3) unstable; urgency=low

  * Fix issue #23, so that if you run 'cabal-debian' and then
    'cabal-debian --compare' it says there are no differences.

 -- David Fox <dsf@seereason.com>  Thu, 08 Jan 2015 05:20:32 -0800

haskell-cabal-debian (4.19.2) unstable; urgency=low

  * Use canonical to put the debianization in a standard form before
    trying to compare existing and generated.
  * Fix bug where cabal-debian program processed the command line options
    twice.
  * Avoid using paths that point to ../ in the cabal file (even if
    disabled by a flag), it causes the package to be rejected by hackage.

 -- David Fox <dsf@seereason.com>  Wed, 07 Jan 2015 13:26:33 -0800

haskell-cabal-debian (4.19.1) unstable; urgency=low

  * Support Cabal-1.22
  * Test whether apt-file is installed (from creichert)
  * Conditional compilation for new symbols MPL and BSD2 (from creichert)

 -- David Fox <dsf@seereason.com>  Wed, 07 Jan 2015 12:56:00 -0800

haskell-cabal-debian (4.19) unstable; urgency=low

  * Add remapCabal function here from a private package
  * Remove debianVersionSplits, which has long been replaced by
    debianDefaultAtoms.

 -- David Fox <dsf@seereason.com>  Mon, 08 Dec 2014 10:07:06 -0800

haskell-cabal-debian (4.18) unstable; urgency=low

  * Add types to support machine readable copyright files.
  * Add --debian-base-name option and overrideDebianBaseName lens.
  * Add --omit-prof-version-deps option flag, have --official imply it

 -- David Fox <dsf@seereason.com>  Thu, 27 Nov 2014 07:11:35 -0800

haskell-cabal-debian (4.17.5) unstable; urgency=low

  * Use the prettyclass package and the PP wrappers in the latest
    debian package to do pretty printing.
  * Change default priority to extra
  * Use the new watch file suggested by nomeata
  * Use the control file template suggested in issue #3

 -- David Fox <dsf@seereason.com>  Mon, 15 Sep 2014 13:28:36 -0700

haskell-cabal-debian (4.17.4) unstable; urgency=low
